# errors

./: Cargo.toml  Makefile  README.md
docs/: index.html
docs/doc/: aliases.js  search-index.js  settings.html  source-files.js
docs/doc/errors/: all.html  enum.BasicType.html  index.html  sidebar-items.js  struct.Err.html  struct.Message.html  struct.MessageWrapper.html  struct.Wrapper.html
docs/doc/errors/debugdisplay/: struct.Message.html  struct.MessageWrapper.html
docs/doc/errors/kv/: enum.BasicType.html  struct.Wrapper.html
docs/doc/implementors/core/clone/: trait.Clone.js
docs/doc/implementors/core/convert/: trait.From.js  trait.Into.js
docs/doc/implementors/core/default/: trait.Default.js
docs/doc/implementors/core/fmt/: trait.Debug.js  trait.Display.js
docs/doc/implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
docs/doc/implementors/serde/ser/: trait.Serialize.js
docs/doc/implementors/std/error/: trait.Error.js
docs/doc/implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
docs/doc/src/errors/: debugdisplay.rs.html  frame.rs.html  kv.rs.html  lib.rs.html
examples/: openfile.rs
src/: debugdisplay.rs  frame.rs  kv.rs  lib.rs
