[package]
name = "errors"
version = "3.0.5"
authors = ["cody laeder <codylaeder@gmail.com>"]
license = "MIT/Apache2"
description = "non-error handling"
repository = "https://github.com/valarauca/errors"
documentation = "https://valarauca/github.io/errors/errors/index.html"
readme = "README.md"
keywords = ["error", "error_handling", "debugging"]
exclude = [
	".gitignore",
]

[dependencies]
serde = { version = "1.0.103", features = ["std","derive"] }
serde_json = "1.0.42"
